--- a/style/style.css
+++ b/style/style.css
@@ -1,23 +1,3 @@
-.div{
-  display: flex;
-  border: 1px solid black;
-  width: 300px;
-  height: 150px;
-  background-color: aquamarine;
-}
-.di{
- margin-top: 15px;
- border: 1px solid black;
- border-radius: 50%;
- width: 100px;
- height: 100px;
- margin-right: 10px;
-
-
-}
-button{
- height: 100px;
- margin-left: 10px;
- margin-top: 15px;
- background-color: aqua;
-}
+/* body{
+  float: right;
+} */
