--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,8 @@
 /* .div1{
 width: 200px;
 height: 200px;
-background-color: antiquewhite;
+background-color: lawngreen;
+border-radius: ;
+margin: auto;
+text-align: center;
 } */
