--- a/style/style.css
+++ b/style/style.css
@@ -1,8 +1,3 @@
-/* .div1{
-width: 200px;
-height: 200px;
-background-color: lawngreen;
-border-radius: ;
-margin: auto;
-text-align: center;
-} */
+.none{
+  display: none;
+}
